Criação do projeto final de JQuery

--- a/CursoJQuery/elementos.html
+++ b/CursoJQuery/elementos.html
@@ -73,7 +73,7 @@
 
             <div class="col-md-4">
                 <button type="button" class="btn btn-danger">Esconder divs</button>
-                <button type="button" class="btn btn-success">Exibir divs</button>
+                <button type="button" ddddddx class="btn btn-success">Exibir divs</button>
             </div>
 
             <div class="col-md-4">
