--- a/CursoJQuery/jogo_da_velha/index.html
+++ b/CursoJQuery/jogo_da_velha/index.html
@@ -6,6 +6,7 @@
 
     <title>Jogo da velha</title>
     <script src="jquery-2.2.1.js"></script>
+    <script src="jogo.js"></script>
 </head>
 
 <body>
@@ -22,17 +23,17 @@
                     <td align="center">
                         <img src="imagens/jogador_1.png" />
                         <br />
-                        <input type="text" maxlength="10" placeholder="Jogador 1" style="border: 0px; text-align: center;" />
+                        <input id="entrada_apelido_jogador_1" type="text" maxlength="10" placeholder="Jogador 1" style="border: 0px; text-align: center;" />
                     </td>
 
                     <td align="center">
-                        <img src="imagens/iniciar.png" />
+                        <img id="btn_iniciar_jogo" src="imagens/iniciar.png" />
                     </td>
 
                     <td align="center">
                         <img src="imagens/jogador_2.png" />
                         <br />
-                        <input type="text" maxlength="10" placeholder="Jogador 2" style="border: 0px; text-align: center;" />
+                        <input id="entrada_apelido_jogador_2" type="text" maxlength="10" placeholder="Jogador 2" style="border: 0px; text-align: center;" />
                     </td>
                 </tr>
             </tbody>
@@ -42,6 +43,8 @@
     <div id="palco_jogo" style="margin-top: 50px;text-align: center;">
         <div style="display: inline-block;">
             <img src="imagens/jogador_1.png">
+            <br/>
+            <span id="nome_jogador_1"></span>
         </div>
 
         <div style="display: inline-block;">
@@ -106,6 +109,8 @@
 
         <div style="display: inline-block;">
             <img src="imagens/jogador_2.png">
+            <br/>
+            <span id="nome_jogador_2"></span>
         </div>
     </div>
 </body>
