--- a/Rocketseat/curso-es6/index.html
+++ b/Rocketseat/curso-es6/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-    <script src="./bundle.js">
-
-    </script>
+    <button id="novotodo">Adicionar</button>    
+    
+    
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
